--- a/EX3/style.css
+++ b/EX3/style.css
@@ -109,8 +109,8 @@ a:active{
   color: #edb808;
 }
 img{
-  width: 65%;
-  height: 50%;
+  width: 500px;
+  height: 250px;
   margin-left: 25px;
   border-radius: 20px;
 }
